chore: update metadata

--- a/example/index.html
+++ b/example/index.html
@@ -5,17 +5,14 @@
     <link rel="icon" href="./assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta
-      name="description"
-      content="Javascript library for Ethereum, Solana and Polygon NFT marketplace and auctions"
-    />
+    <meta name="description" content="Carbon Credit Marketplace on Solana" />
     <link rel="apple-touch-icon" href="./assets/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="./assets/manifest.json" />
-    <title>Carbon Market</title>
+    <title>My Carbon Offset Hero</title>
   </head>
   <body>
     <div id="root"></div>
